--- a/config.yaml
+++ b/config.yaml
@@ -1,13 +1,14 @@
 # === EXTRAS ===
-debug: true
+debug: false
 remove_outliers: false
+exogen_features: false
 
 # === CONFIGURAÇÃO DOS DADOS ===
 ds_col: mes
 y_col: venda_unidades
-time_col: mes           # ← importante pro MLForecast
-target_col: venda_unidades
-id_col: sku             # ← seu unique_id (ajuste se for outro)
+time_col: ds           # ← importante pro MLForecast
+target_col: y
+id_col: unique_id             # ← seu unique_id (ajuste se for outro)
 
 outlier:
   remove: false
@@ -17,6 +18,7 @@ outlier:
 data:
   raw_path: data/raw/
   interim_path: data/interim/
+  processed_path: data/processed/
 
 min_time_series_length: 42
 columns_selected: ['mes', 'venda_unidades']
@@ -25,12 +27,12 @@ columns_selected: ['mes', 'venda_unidades']
 hierarchical_spec:
   - ['total']
   - ['total','centro_distribuicao']
-  - ['total','centro_distribuicao','regiao_loja']
-  - ['total','centro_distribuicao','regiao_loja','clima_loja']
-  - ['total','centro_distribuicao','regiao_loja','clima_loja','loja']
-  - ['total','centro_distribuicao','regiao_loja','clima_loja','loja','produto']
-  - ['total','centro_distribuicao','regiao_loja','clima_loja','loja','produto','material']
-  - ['total','centro_distribuicao','regiao_loja','clima_loja','loja','produto','material','sku']
+  #- ['total','centro_distribuicao','regiao_loja']
+  #- ['total','centro_distribuicao','regiao_loja','clima_loja']
+  #- ['total','centro_distribuicao','regiao_loja','clima_loja','loja']
+  #- ['total','centro_distribuicao','regiao_loja','clima_loja','loja','produto']
+  #- ['total','centro_distribuicao','regiao_loja','clima_loja','loja','produto','material']
+  #- ['total','centro_distribuicao','regiao_loja','clima_loja','loja','produto','material','sku']
 
 # === FEATURES ===
 features:
@@ -94,29 +96,17 @@ models:
     regressor: LGBMRegressor
     fixed_params:
       objective: poisson
-      boosting_type: gbdt
-      metric: mape
-      bagging_freq: 1
-      force_col_wise: true
-      verbose: -1
+      #boosting_type: gbdt
+      #metric: mape
+      #bagging_freq: 1
+      #force_col_wise: true
+      verbosity: -1
       n_jobs: -1
-      seed: 42
-      deterministic: true
-
-  XGBoost:
-    enabled: true
-    type: mlforecast
-    regressor: XGBRegressor
-    fixed_params:
-      objective: reg:squarederror
-      eval_metric: mape
-      n_jobs: -1
-      seed: 42
-      tree_method: hist
-      enable_categorical: true
+      #seed: 42
+      #deterministic: true
 
   CatBoost:
-    enabled: true
+    enabled: false
     type: mlforecast
     regressor: CatBoostRegressor
     fixed_params:
@@ -128,69 +118,158 @@ models:
       cat_features: auto
       allow_writing_files: false
 
-  StatsForecast:
-    enabled: true
+  XGBoost:
+    enabled: false
+    type: mlforecast
+    regressor: XGBRegressor
+    fixed_params:
+      objective: reg:squarederror
+      eval_metric: mape
+      n_jobs: -1
+      seed: 42
+      tree_method: hist
+      enable_categorical: true
+
+  AutoARIMA: 
+    enabled: false
     type: statsforecast
-    models:
-      AutoARIMA: {season_length: 12, approximation: true}
-      AutoETS: {season_length: 12, model: ZZZ}
-      AutoTheta: {season_length: 12, decomposition_type: multiplicative}
-      SeasonalNaive: {season_length: 12}
-      HistoricAverage: {}
+    fixed_params:
+      season_length: 12
+      approximation: true
 
-# === ESPAÇO DE BUSCA (comum) ===
+  AutoETS:
+    enabled: false
+    type: statsforecast
+    fixed_params:
+      season_length: 12
+      model: ZZZ
+  
+  AutoTheta:
+    enabled: false
+    type: statsforecast
+    fixed_params:
+      season_length: 12
+      decomposition_type: multiplicative
+
+  SeasonalNaive:
+    enabled: false
+    type: statsforecast
+    fixed_params:
+      season_length: 12
+
+# === ESPAÇO DE BUSCA POR MODELO ===
 parameter_space:
-  learning_rate: {low: 0.01, high: 0.3, log: true}
-  n_estimators: {low: 500, high: 5000, log: true}
-  max_depth: {low: 3, high: 15}
-  min_child_samples: {low: 5, high: 200, log: true}      # LGBM
-  min_child_weight: {low: 1, high: 100, log: true}       # XGB/Cat
-  subsample: {low: 0.6, high: 1.0}
-  colsample_bytree: {low: 0.6, high: 1.0}
-  reg_alpha: {low: 1e-8, high: 10.0, log: true}
-  reg_lambda: {low: 1e-8, high: 10.0, log: true}
+  LightGBM:
+    float:
+      learning_rate: {param: learning_rate, low: 0.01, high: 0.3, log: true}
+      feature_fraction: {param: feature_fraction, low: 0.7, high: 1.0} 
+      bagging_fraction: {param: bagging_fraction, low: 0.7, high: 1.0}
+      lambda_l1: {param: lambda_l1, low: 1e-8, high: 1.0, log: true}
+      lambda_l2: {param: lambda_l2, low: 1e-8,high: 1.0, log: true}
+    int:
+      num_leaves: {param: num_leaves, low: 8, high: 64}
+      max_depth:  {param: max_depth, low: 3, high: 10}
+      min_data_in_leaf: {param: min_data_in_leaf,low: 5, high: 20}
+      n_estimators: {param: n_estimators, low: 300, high: 3000}
 
-# === MODELAGEM MLFORECAST ===
+  CatBoost:
+    learning_rate: {low: 0.01, high: 0.3, log: true}
+    iterations: {low: 500, high: 5000, log: true}
+    depth: {low: 4, high: 12}
+    l2_leaf_reg: {low: 1, high: 10, log: true}
+    bagging_temperature: {low: 0.0, high: 1.0}
+
+  XGBoost:
+    learning_rate: {low: 0.01, high: 0.3, log: true}
+    n_estimators: {low: 500, high: 5000, log: true}
+    max_depth: {low: 3, high: 15}
+    min_child_weight: {low: 1, high: 100, log: true}
+    subsample: {low: 0.6, high: 1.0}
+    colsample_bytree: {low: 0.6, high: 1.0}
+    reg_alpha: {low: 1e-8, high: 10.0, log: true}
+    reg_lambda: {low: 1e-8, high: 10.0, log: true}
+
+# === PRESETS DE FEATURES (TUDO AQUI — unificado e perfeito) ===
 modeling:
   mlforecast:
     freq: MS
     h: 6
     n_windows: 6
     step_size: 1
-    time_col: mes
-    target_col: venda_unidades
-    id_col: sku
+    time_col: ds
+    target_col: y
+    id_col: unique_id
 
-    init_params:
-      lags: [1, 2, 3, 4, 5, 6, 12]
-      lag_transforms:
-        1: [ExpandingMean]
-        2:
-          - RollingMean: {window_size: 3}
-          - RollingMean: {window_size: 6}
-        12: [RollingMean: {window_size: 3}]
-      target_transforms: [LocalBoxCox]
-      date_features: [month, quarter, is_month_start, is_month_end]
+    # === TUNING ATIVO ===
+    tuning:
+      search_lag_preset: true
+      search_target_preset: true
+      search_date_preset: true
+      active_lag_preset: full_recent
+      active_target_preset: boxcox
+      active_date_preset: full
+
+    presets:
+      # === PRESETS DE LAGS ===
+      lag_strategies:
+        none:
+          lags: []
+          transforms: {}
+        only_seasonal:
+          lags: [12]
+          transforms: {}
+        short_seasonal:
+          lags: [6, 12]
+          transforms:
+            6: [rolling_mean_3]
+            12: [rolling_mean_3]
+        full_recent:
+          lags: [1, 2, 3, 4, 5, 6, 12]
+          transforms:
+            1: [expanding_mean]
+            6: [rolling_mean_3, rolling_mean_6]
+            12: [expanding_mean, rolling_mean_3]
+        ultra:
+          lags: [1, 3, 6, 9, 12]
+          transforms:
+            1: [expanding_mean]
+            3: [rolling_mean_3]
+            6: [expanding_mean, rolling_mean_3, rolling_mean_6]
+            12: [expanding_mean, rolling_mean_3, rolling_mean_6]
+
+      # === PRESETS DO TARGET ===
+      target_transforms:
+        none: []
+        detrend: [differences_1]
+        boxcox: [boxcox]
+        standardize: [standard_scaler]
+
+      # === PRESETS DE DATA ===
+      date_features:
+        basic: [month, quarter]
+        full: [month, quarter, is_month_start, is_month_end]
+
+    
 
     fit_params:
       static_features:
-        - sku
-        - loja
-        - produto
-        - material
-        - cor
-        - tamanho
-        - marca
-        - clima_loja
+        - []
+      #  - sku
+      #  - loja
+      #  - produto
+      #  - material
+      #  - cor
+      #  - tamanho
+      #  - marca
+      #  - clima_loja
 
     backtest:
       enabled: true
       n_months_test: 6
-      strategy: last_n_months
-
+      
     validation:
       metric: smape
-      n_trials: 80
+      n_trials: 100
       timeout: 14400
 
 # === ENSEMBLE ===
@@ -209,6 +288,7 @@ reconciliation:
 
 # === OPTUNA ===
 optuna:
+  direction: minimize
   n_trials: 80
   timeout: 14400
   sampler:
@@ -217,6 +297,7 @@ optuna:
   pruner:
     type: MedianPruner
     n_startup_trials: 40
+  metric: rmsse
 
 # === DTYPES ===
 dtypes:
