--- a/config.yaml
+++ b/config.yaml
@@ -11,6 +11,14 @@ time_col: ds           # ← importante pro MLForecast
 target_col: y
 id_col: unique_id             # ← seu unique_id (ajuste se for outro)
 
+split_dates:
+  train:
+    start: '2023-01-01'
+    end: '2025-01-01'
+  test:
+    start: '2025-02-01'
+    end: '2025-07-01'
+
 outlier:
   remove: false
   iqr_factor: 3.0
@@ -26,6 +34,8 @@ paths:
     champion_model_path: models/champion
   plots:
     plots_path: plots/
+  evaluation:
+    evaluation_path: evaluation
 
 min_time_series_length: 42
 columns_selected: ['mes', 'venda_unidades']
@@ -33,7 +43,9 @@ columns_selected: ['mes', 'venda_unidades']
 # === HIERARQUIA ===
 hierarchical_spec:
   - ['total']
-  - ['total','centro_distribuicao']
+  - ['total','produto']
+  - ['total','produto','centro_distribuicao']
+  - ['total','produto','centro_distribuicao',loja]
   #- ['total','centro_distribuicao','regiao_loja']
   #- ['total','centro_distribuicao','regiao_loja','clima_loja']
   #- ['total','centro_distribuicao','regiao_loja','clima_loja','loja']
@@ -117,7 +129,7 @@ models:
     type: mlforecast
     regressor: CatBoostRegressor
     fixed_params:
-      loss_function: Poisson
+      loss_function: tweedie
       eval_metric: MAPE
       thread_count: -1
       verbose: false
@@ -199,14 +211,16 @@ parameter_space:
 # === PRESETS DE FEATURES ===
 modeling:
   training_metric:
-    rmsse
+    mase
   validation_metric:
-    wrsse
+    wrmsse
   compare_metrics:
-    - rmse
-    - rmsse 
-    - mase
+    - wrmsse
     - smape
+    - mase
+    - rmsse 
+    - rmse
+    
   cv_config:
     h: 6
     n_windows: 6
@@ -229,7 +243,7 @@ modeling:
       search_target_preset: true
       search_date_preset: true
       active_lag_preset: full_recent
-      active_target_preset: boxcox
+      active_target_preset: none
       active_date_preset: full
 
     presets:
@@ -307,7 +321,8 @@ ensemble:
 reconciliation:
   enabled: true
   methods: [BottomUp,TopDown,MiddleOut,MinTrace]
-  min_trace_methods: ['wls_var','wls_struct','mint_shrink']
+  min_trace_methods: [wls_var,wls_struct,mint_shrink]
+  middle_level: total/produto/centro_distribuicao
 
 # === OPTUNA ===
 optuna:
